# WinTaskLite

./: CHANGELOG.md  CONTRIBUTING.md  FAQ.md  README.md  design.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: i18n.ts
src/lib/components/: AboutDialog.svelte  HelpDialog.svelte
src/routes/: +page.svelte
