[package]
name = "tasklite"
version = "0.1.0"
description = "A lite task manager for windows"
authors = ["RiceZero"]
edition = "2026"

[lib]
name = "tasklite_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
