[package]
name = "tasklite"
version = "1.0.1"
description = "A lite task manager for windows"
authors = ["RiceZero"]
edition = "2021"

[lib]
name = "tasklite_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
panic = "abort"     # Smaller panic handler

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.32"
